system/authentik/overlays/dev/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: dev.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: authentik-server
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`key.dev.anotherlife.pl`)
    # middlewares:
    #   - name: chain-traefik-dashboard
    #     namespace: traefik
    services:
    - kind: TraefikService
      name: authentik-server
      port: 443
  tls:
    domains:
    - main: dev.anotherlife.pl
      sans:
      - .dev.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-dev
